@@ -1,0 +1,1 @@
+MD5 fdd2edb48c17f52ace9e2b00a3ac17f9 logwatch-4.3.2.tar.gz 57546
